Little changes in getWeatherinfo and create rain alarm
Problem with cold alarm, and sound.
The api calll should be different for the rain alarm, or maybe or alarms

--- a/index.html
+++ b/index.html
@@ -40,8 +40,12 @@
         </div>
 
     </div>
+
+    <script src="GetWeatherInfo.js"></script>
     <script src="HotAlarm.js"></script>
-    <script src="scriptV1.js"></script>
+    <script src="ColdAlarm.js"></script>
+    <script src="RainAlarm.js"></script>
+    
     
 
 </body>
